--- a/index.html
+++ b/index.html
@@ -360,9 +360,6 @@
         </div>
       </div>
     </section>
-    <!-- NEWSLETTER -->
-
-    <section class="newsletter"></section>
 
     <!-- FOOTER -->
     <footer>
@@ -370,15 +367,78 @@
         <div class="footer__subscribe">
           <h2>Subscribe To Our Newsletter</h2>
           <form>
-            <input type="email" placeholder="Your Email Address">
-            <button><i class="fa-regular fa-paper-plane"></i></button>
+            <input type="email" placeholder="Your Email Address"><button><i class="fa-regular fa-paper-plane"></i></button>
           </form>
         </div>
         <div class="footer__list">
-          <div class="footer__contact"></div>
-          <div class="footer__links"></div>
-          <div class="footer__services"></div>
-          <div class="footer__others"></div>
+          <div class="footer__contact">
+            <a href="#">
+              <img src="./img/logo-white.png" alt="">
+            </a>
+            <ul>
+              <li>
+                <i class="fa fa-phone"></i>
+                <p>1800-123-4567<br>+91 987-654-3210</p>
+              </li>
+              <li>
+                <i class="fa fa-envelope"></i>
+                <p>info@example.com<br>services@gmail.com</p>
+              </li>
+              <li>
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Demo Address #8901 Marmora<br>Road City</p>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__items">
+            <h3 class="footer__items__title">Our links</h3>
+            <ul class="footer__items__content">
+              <li class="footer__item">
+                <a href="#">
+                  <i class="fa fa-angle-right"></i>
+                  Home
+                </a>
+              </li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>About Us</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Services</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Team</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Blog</a></li>
+            </ul>
+          </div>
+          <div class="footer__items">
+            <h3 class="footer__items__title">Our Services</h3>
+            <ul class="footer__items__content">
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Strategy & Research</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Web Development</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Web Solution</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Digital Marketing</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>App Design</a></li>
+            </ul>
+          </div>
+          <div class="footer__items">
+            <h3 class="footer__items__title">Other links</h3>
+            <ul class="footer__items__content">
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>FAQ</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Portfolio</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Privacy Policy</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Term & Conditions</a></li>
+              <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <div class="container">
+          <div class="footer__copyright__content">
+            <div class="footer__copyright__text">
+              <p>Copyright © 2021 <span>DexignZone</span> . All rights reserved. </p>
+            </div>
+            <div class="footer__media">
+              <a href=""><i class="fab fa-facebook-f"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
