Add back to top function

--- a/index.html
+++ b/index.html
@@ -489,6 +489,10 @@
       </div>
     </footer>
 
+    <!-- BACK TO TOP -->
+    <a href="#" class="back__to__top cd-top text-replace js-cd-top">
+      <i class="fa-solid fa-arrow-up"></i>
+    </a>
     <script
       src="https://code.jquery.com/jquery-1.12.4.js"
       integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
@@ -518,6 +522,10 @@
         delay: 2,
       });
     </script>
+
+    <!-- BACK TO TOP JS -->
+    <script src="./js/back-to-top-master/assets/js/main.js"></script>
+    <script src="./js/back-to-top-master/assets/js/util.js"></script>
 
   </body>
 </html>
