Add WOW effect and favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <title>Samar</title>
 
     <!-- GG FONTS -->
@@ -28,6 +29,9 @@
     <!-- SLICK CSS -->
     <link rel="stylesheet" href="./css/slick/slick.css" />
     <link rel="stylesheet" href="./css/slick/slick-theme.css" />
+
+    <!-- WOW CSS -->
+    <link rel="stylesheet" href="./js/WOW-master/css/libs/animate.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/index.css" />
@@ -204,9 +208,9 @@
       <div class="container">
         <div class="features__content">
           <div class="features__left">
-            <h2 class="s-title animate__fadeInLeft animate__delay-2s">Our Features</h2>
-            <h1 class="title animate__fadeInLeft animate__delay-2s">Behind The Story<br />Of Samar Agency</h1>
-            <div class="features__item animate__fadeInRight animate__delay-2s">
+            <h2 class="wow s-title animate__fadeInLeft">Our Features</h2>
+            <h1 class="wow title animate__fadeInLeft">Behind The Story<br />Of Samar Agency</h1>
+            <div class="wow features__item animate__fadeInRight">
               <i class="fa-regular fa-lightbulb"></i>
               <div class="features__item__detail">
                 <h2 class="features__item__title">Idea & Analysis Gathering</h2>
@@ -216,7 +220,7 @@
                 </p>
               </div>
             </div>
-            <div class="features__item animate__fadeInRight animate__delay-3s">
+            <div class="wow features__item animate__fadeInRight animate__delay-1s">
               <i class="fa-solid fa-laptop-code"></i>
               <div class="features__item__detail">
                 <h2 class="features__item__title">Design & Developing</h2>
@@ -226,7 +230,7 @@
                 </p>
               </div>
             </div>
-            <div class="features__item animate__fadeInRight animate__delay-4s">
+            <div class="wow features__item animate__fadeInRight animate__delay-2s">
               <i class="fa-brands fa-space-awesome"></i>
               <div class="features__item__detail">
                 <h2 class="features__item__title">Testing & Lunching</h2>
@@ -249,7 +253,7 @@
         <h2 class="s-title">Portfolio</h2>
         <h1 class="title">Our Latest Work</h1>
         <div class="portfolio__detail">
-          <div class="portfolio__detail__item portfolio__detail-1 animate__fadeInUp animate__delay-1s">
+          <div class="portfolio__detail__item portfolio__detail-1 wow animate__fadeInUp animate__delay-1s">
             <img src="./img/pic1_2.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -259,7 +263,7 @@
               </div>
             </div>
           </div>
-          <div class="portfolio__detail__item portfolio__detail-2 animate__fadeInUp animate__delay-1s">
+          <div class="portfolio__detail__item portfolio__detail-2 wow animate__fadeInUp animate__delay-1s">
             <img src="./img/pic2_1.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -269,7 +273,7 @@
               </div>
             </div>
           </div>
-          <div class="portfolio__detail__item portfolio__detail-3 animate__fadeInUp animate__delay-2s">
+          <div class="portfolio__detail__item portfolio__detail-3 wow animate__fadeInUp animate__delay-2s">
             <img src="./img/pic3_1.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -279,7 +283,7 @@
               </div>
             </div>
           </div>
-          <div class="portfolio__detail__item portfolio__detail-4 animate__fadeInUp animate__delay-2s">
+          <div class="portfolio__detail__item portfolio__detail-4 wow animate__fadeInUp animate__delay-2s">
             <img src="./img/pic4.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -289,7 +293,7 @@
               </div>
             </div>
           </div>
-          <div class="portfolio__detail__item portfolio__detail-5 animate__fadeInUp animate__delay-4s">
+          <div class="portfolio__detail__item portfolio__detail-5 wow animate__fadeInUp animate__delay-4s">
             <img src="./img/pic5.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -299,7 +303,7 @@
               </div>
             </div>
           </div>
-          <div class="portfolio__detail__item portfolio__detail-6 animate__fadeInUp animate__delay-3s">
+          <div class="portfolio__detail__item portfolio__detail-6 wow animate__fadeInUp animate__delay-3s">
             <img src="./img/pic6.jpg" alt="">
             <div class="portfolio__detail__overlay">
               <i class="fa-solid fa-plus"></i>
@@ -410,14 +414,14 @@
     <!-- FOOTER -->
     <footer>
       <div class="container">
-        <div class="footer__subscribe animate__fadeInUp">
+        <div class="footer__subscribe wow animate__fadeInUp wow">
           <h2>Subscribe To Our Newsletter</h2>
           <form>
             <input type="email" placeholder="Your Email Address"><button><i class="fa-regular fa-paper-plane"></i></button>
           </form>
         </div>
         <div class="footer__list">
-          <div class="footer__contact animate__fadeIn animate__delay-2s">
+          <div class="footer__contact wow animate__fadeIn animate__delay-1s">
             <a href="#">
               <img src="./img/logo-white.png" alt="">
             </a>
@@ -436,7 +440,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer__items animate__fadeIn animate__delay-2s">
+          <div class="footer__items wow animate__fadeIn animate__delay-1s">
             <h3 class="footer__items__title">Our links</h3>
             <ul class="footer__items__content">
               <li class="footer__item">
@@ -451,7 +455,7 @@
               <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Blog</a></li>
             </ul>
           </div>
-          <div class="footer__items">
+          <div class="footer__items wow animate__fadeIn animate__delay-1s">
             <h3 class="footer__items__title">Our Services</h3>
             <ul class="footer__items__content">
               <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>Strategy & Research</a></li>
@@ -461,7 +465,7 @@
               <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>App Design</a></li>
             </ul>
           </div>
-          <div class="footer__items">
+          <div class="footer__items wow animate__fadeIn animate__delay-1s">
             <h3 class="footer__items__title">Other links</h3>
             <ul class="footer__items__content">
               <li class="footer__item"><a href="#"><i class="fa fa-angle-right"></i>FAQ</a></li>
@@ -493,6 +497,7 @@
     <a href="#" class="back__to__top cd-top text-replace js-cd-top">
       <i class="fa-solid fa-arrow-up"></i>
     </a>
+
     <script
       src="https://code.jquery.com/jquery-1.12.4.js"
       integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
@@ -526,6 +531,10 @@
     <!-- BACK TO TOP JS -->
     <script src="./js/back-to-top-master/assets/js/main.js"></script>
     <script src="./js/back-to-top-master/assets/js/util.js"></script>
+
+    <!-- WOW JS -->
+    <script src="./js/WOW-master/dist/wow.min.js"></script>
+    <script>new WOW().init();</script>
 
   </body>
 </html>
